--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         </a>
       </div>
 
-      <footer>Feito com ♥ por Davi Campos</footer>
+      <footer>Feito com ♥ pela Rocketseat</footer>
     </div>
 
     <script
