--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div id="container">
       <div id="profile">
         <img
-          src="/assets/avatar.png"
+          src="./assets/avatar.png"
           zalt="Imagem de Davi Campos com a mão no queixo."
         />
         <p>@index.davui</p>
@@ -75,7 +75,7 @@
         </a>
       </div>
 
-      <footer>Feito com ♥ pela Rocketseat</footer>
+      <footer>Feito com ♥ pela <a href="https://www.rocketseat.com.br/">Rocketseat</a></footer>
     </div>
 
     <script
