--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt-br" class="light"></div>
+<html lang="pt-br">
   <head>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -75,7 +75,9 @@
         </a>
       </div>
 
-      <footer>Feito com ♥ pela <a href="https://www.rocketseat.com.br/">Rocketseat</a></footer>
+      <footer>
+        Feito com ♥ pela <a href="https://www.rocketseat.com.br/">Rocketseat</a>
+      </footer>
     </div>
 
     <script
