--- a/index.html
+++ b/index.html
@@ -59,11 +59,11 @@
           <ion-icon name="logo-github"></ion-icon>
         </a>
 
-        <a href="https://github.com/index.davui" target="_blank ">
+        <a href="https://www.instagram.com/index.davui/" target="_blank ">
           <ion-icon name="logo-instagram"></ion-icon>
         </a>
 
-        <a href="https://github.com/DavuiC" target="_blank ">
+        <a href="https://www.youtube.com/@rocketseat" target="_blank ">
           <ion-icon name="logo-youtube"></ion-icon>
         </a>
 
