--- a/index.html
+++ b/index.html
@@ -7,20 +7,21 @@
       href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500&display=swap"
       rel="stylesheet"
     />
+
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css" />
     <title>DevLinks</title>
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <div id="container">
       <div id="profile">
         <img
           src="./assets/avatar.png"
-          zalt="Imagem de Davi Campos com a mão no queixo."
+          alt="Foto de Mayk Brito sorrindo, usando óculos e camisa preta, barba e fundo amarelo."
         />
-        <p>@index.davui</p>
+        <p>@maykbrito</p>
       </div>
 
       <div id="switch" onclick="toggleMode()">
@@ -30,53 +31,43 @@
 
       <ul>
         <li>
-          <a
-            href="https://app.rocketseat.com.br/event/nlw-setup"
-            target="_blank"
-            >Inscreva-se no NLW</a
-          >
+          <a href="#">Inscrever-se no NLW</a>
         </li>
 
         <li>
-          <a href="#" target="_blank ">Baixe meu e-book</a>
+          <a href="#">Baixar meu e-book</a>
         </li>
 
         <li>
-          <a href="https://github.com/DavuiC" target="_blank"
-            >Veja meu portfólio</a
-          >
+          <a href="https://github.com/maykbrito">Ver meu portfólio</a>
         </li>
 
         <li>
-          <a href="https://app.rocketseat.com.br/explorer" target="_blank "
+          <a href="https://rocketseat.com.br/explorer" target="_blank"
             >Conheça o Explorer</a
           >
         </li>
       </ul>
-
       <div id="social-links">
-        <a href="https://github.com/DavuiC" target="_blank ">
+        <a href="https://github.com/maykbrito" target="_blank">
           <ion-icon name="logo-github"></ion-icon>
         </a>
 
-        <a href="https://www.instagram.com/index.davui/" target="_blank ">
+        <a href="https://instagram.com/maykbrito" target="_blank">
           <ion-icon name="logo-instagram"></ion-icon>
         </a>
 
-        <a href="https://www.youtube.com/@rocketseat" target="_blank ">
+        <a href="https://youtube.com/maykbrito" target="_blank">
           <ion-icon name="logo-youtube"></ion-icon>
         </a>
 
-        <a
-          href="https://www.linkedin.com/in/davi-campos-mendes-181b57248/"
-          target="_blank "
-        >
+        <a href="https://linkedin.com/in/maykbrito" target="_blank">
           <ion-icon name="logo-linkedin"></ion-icon>
         </a>
       </div>
 
       <footer>
-        Feito com ♥ pela <a href="https://www.rocketseat.com.br/">Rocketseat</a>
+        Feito com ♥ pela <a href="https://rocketseat.com.br/">Rocketseat</a>
       </footer>
     </div>
 
@@ -88,6 +79,7 @@
       nomodule
       src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"
     ></script>
-    <script src="/script.js"></script>
+
+    <script src="./script.js"></script>
   </body>
 </html>
