--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
       <div id="profile">
         <img
           src="./assets/avatar.png"
-          alt="Foto de Mayk Brito sorrindo, usando óculos e camisa preta, barba e fundo amarelo."
+          alt="Foto de Davi Campos com a mão cobrindo a boca."
         />
-        <p>@maykbrito</p>
+        <p>@index.davui</p>
       </div>
 
       <div id="switch" onclick="toggleMode()">
@@ -31,43 +31,43 @@
 
       <ul>
         <li>
-          <a href="#">Inscrever-se no NLW</a>
+          <a href="#">LINK</a>
         </li>
 
         <li>
-          <a href="#">Baixar meu e-book</a>
+          <a href="#">LINK</a>
         </li>
 
         <li>
-          <a href="https://github.com/maykbrito">Ver meu portfólio</a>
+          <a href="https://github.com/DavuiC">Ver meu portfólio</a>
         </li>
 
         <li>
-          <a href="https://rocketseat.com.br/explorer" target="_blank"
-            >Conheça o Explorer</a
+          <a href="#" target="_blank"
+            >LINK</a
           >
         </li>
       </ul>
       <div id="social-links">
-        <a href="https://github.com/maykbrito" target="_blank">
+        <a href="https://github.com/DavuiC" target="_blank">
           <ion-icon name="logo-github"></ion-icon>
         </a>
 
-        <a href="https://instagram.com/maykbrito" target="_blank">
+        <a href="https://instagram.com/index.davui" target="_blank">
           <ion-icon name="logo-instagram"></ion-icon>
         </a>
 
-        <a href="https://youtube.com/maykbrito" target="_blank">
+        <a href="#" target="_blank">
           <ion-icon name="logo-youtube"></ion-icon>
         </a>
 
-        <a href="https://linkedin.com/in/maykbrito" target="_blank">
+        <a href="https://www.linkedin.com/in/davi-campos-mendes-181b57248/" target="_blank">
           <ion-icon name="logo-linkedin"></ion-icon>
         </a>
       </div>
 
       <footer>
-        Feito com ♥ pela <a href="https://rocketseat.com.br/">Rocketseat</a>
+        Feito com ♥ por Davi Campos
       </footer>
     </div>
 
